fixed input box zoom on ios

--- a/style.css
+++ b/style.css
@@ -432,7 +432,7 @@ a {
         display: none;
     }
     textarea:active, input:active {
-        font-size: 100%;
+        font-size: 100% !important;
     }
 }
 @media screen and (max-width: 550px){
